# mastermind

./: .gitignore  README.md  pyproject.toml  pytest.ini
mastermind/: mastermind.py
tests/: test_mastermind.py
